--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -32,7 +32,7 @@ jobs:
           # JFrog organization secret
           JFROG_CLI_BUILD_NUMBER : ${{ github.run_number }}
         run: |
-          # Export the build name and build nuber
+          # Export the build name and build number
           # Collect environment variables for the build
           jf rt build-collect-env
           # Collect VCS details from git and add them to the build
